--- a/rebar.config
+++ b/rebar.config
@@ -1,2 +1,11 @@
 {erl_opts, [debug_info]}.
-{deps, []}.
+
+{deps, [{epgsql, "3.4.0"}]}.
+
+{relx, [{release, {reconnections, "0.1.0"},
+         [reconnections]},
+        {dev_mode, true},
+        {include_erts, false},
+        {extended_start_script, false},
+        {sys_config, "conf/sys.config"}
+       ]}.
