Add redis driver

--- a/conf/sys.config
+++ b/conf/sys.config
@@ -7,5 +7,13 @@
             {database, "test_db"},
             {timeout , 4000}
           ]
+  },
+  {redis, [
+            {host , "127.0.0.1"},
+            {port , 6379},
+            {password , ""},
+            {database , 0},
+            {reconnect_sleep , 100}
+          ]
   }
 ].
