--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,8 @@
 {erl_opts, [debug_info]}.
 
-{deps, [{epgsql, "3.4.0"}]}.
+{deps, [{epgsql, "3.4.0"},
+        {eredis, "1.1.0"}
+       ]}.
 
 {relx, [{release, {reconnections, "0.1.0"},
          [reconnections]},
