[Close #7] Add dev Profile

--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,6 @@
 {erl_opts, [debug_info]}.
 
-{deps, [{epgsql, "3.4.0"},
-        {eredis, "1.1.0"}
-       ]}.
+{deps, []}.
 
 {relx, [{release, {reconnections, "0.1.0"},
          [reconnections]},
@@ -11,3 +9,12 @@
         {extended_start_script, false},
         {sys_config, "conf/sys.config"}
        ]}.
+
+{profiles, [
+  {dev, [
+    {deps, [
+      {epgsql, "3.4.0"},
+      {eredis, "1.1.0"}
+    ]}
+  ]}
+]}.
