Parameterized driver servers

--- a/conf/sys.config
+++ b/conf/sys.config
@@ -1,19 +1,22 @@
 [
-  {reconnections, []},
-  {pgsql, [
-            {host, "127.0.0.1"},
-            {username, "postgres"},
-            {password, "example"},
-            {database, "test_db"},
-            {timeout , 4000}
-          ]
-  },
-  {redis, [
-            {host , "127.0.0.1"},
-            {port , 6379},
-            {password , ""},
-            {database , 0},
-            {reconnect_sleep , 100}
-          ]
-  }
+  {reconnections, [
+    {drivers, [
+      [
+        {type         , epgsql},
+        {host         , "127.0.0.1"},
+        {username     , "postgres"},
+        {password     , "example"},
+        {database     , "test_db"},
+        {reconnection , {uniform, 4000}}
+      ],
+      [
+        {type         , eredis},
+        {host         , "127.0.0.1"},
+        {port         , 6379},
+        {password     , ""},
+        {database     , 0},
+        {reconnection , {uniform, 4000}}
+      ]
+    ]}
+  ]}
 ].
