--- a/rebar.config
+++ b/rebar.config
@@ -1,14 +1,17 @@
-{erl_opts, [debug_info]}.
+{erl_opts, [
+  debug_info,
+  {parse_transform, lager_transform}
+]}.
 
-{deps, []}.
+{deps, [{lager, "3.5.2"}]}.
 
-{relx, [{release, {reconnections, "0.1.0"},
-         [reconnections]},
-        {dev_mode, true},
-        {include_erts, false},
-        {extended_start_script, false},
-        {sys_config, "conf/sys.config"}
-       ]}.
+{relx, [
+  {release, {reconnections, "0.1.0"}, [reconnections]},
+  {dev_mode, true},
+  {include_erts, false},
+  {extended_start_script, false},
+  {sys_config, "conf/sys.config"}
+]}.
 
 {profiles, [
   {dev, [
