--- a/rebar.config
+++ b/rebar.config
@@ -5,6 +5,8 @@
 
 {deps, [{lager, "3.5.2"}]}.
 
+{ct_opts, [{sys_config, "conf/sys.config"}]}.
+
 {relx, [
   {release, {reconnections, "0.1.0"}, [reconnections]},
   {dev_mode, true},
