--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,12 @@ version: '3.1'
 
 services:
 
+  app:
+    image: erlang:20
+    volumes:
+      ".:/opt/reconnections"
+    command: erl -pa /_build/default/lib/*/ebin/ -config /conf/sys
+
   postgres:
     image: postgres
     ports:
