--- a/rebar.config
+++ b/rebar.config
@@ -21,5 +21,12 @@
       {epgsql, "3.4.0"},
       {eredis, "1.1.0"}
     ]}
+  ]},
+  {test, [
+    {deps, [
+      {blockaderl, {git, "https://github.com/lambdaclass/blockaderl.git", {ref, "d114125"}}},
+      {epgsql, "3.4.0"},
+      {eredis, "1.1.0"}
+    ]}
   ]}
 ]}.
