--- a/rebar.config
+++ b/rebar.config
@@ -19,14 +19,16 @@
   {dev, [
     {deps, [
       {epgsql, "3.4.0"},
-      {eredis, "1.1.0"}
+      {eredis, "1.1.0"},
+      {cqerl, {git, "https://github.com/matehat/cqerl.git", {tag, "v1.0.8"}}}
     ]}
   ]},
   {test, [
     {deps, [
       {blockaderl, {git, "https://github.com/lambdaclass/blockaderl.git", {ref, "d114125"}}},
       {epgsql, "3.4.0"},
-      {eredis, "1.1.0"}
+      {eredis, "1.1.0"},
+      {cqerl, {git, "https://github.com/matehat/cqerl.git", {tag, "v1.0.8"}}}
     ]}
   ]}
 ]}.
