--- a/rebar.config
+++ b/rebar.config
@@ -20,7 +20,8 @@
     {deps, [
       {epgsql, "3.4.0"},
       {eredis, "1.1.0"},
-      {cqerl, {git, "https://github.com/matehat/cqerl.git", {tag, "v1.0.8"}}}
+      {cqerl, {git, "https://github.com/matehat/cqerl.git", {tag, "v1.0.8"}}},
+      {blockaderl, {git, "https://github.com/lambdaclass/blockaderl.git", {ref, "d114125"}}}
     ]}
   ]},
   {test, [
