--- a/rebar.config
+++ b/rebar.config
@@ -21,15 +21,17 @@
       {epgsql, "3.4.0"},
       {eredis, "1.1.0"},
       {cqerl, {git, "https://github.com/matehat/cqerl.git", {tag, "v1.0.8"}}},
+      {emysql, "0.4.4", {pkg, inaka_emysql}},
       {blockaderl, {git, "https://github.com/lambdaclass/blockaderl.git", {ref, "d114125"}}}
     ]}
   ]},
   {test, [
     {deps, [
-      {blockaderl, {git, "https://github.com/lambdaclass/blockaderl.git", {ref, "d114125"}}},
       {epgsql, "3.4.0"},
       {eredis, "1.1.0"},
-      {cqerl, {git, "https://github.com/matehat/cqerl.git", {tag, "v1.0.8"}}}
+      {cqerl, {git, "https://github.com/matehat/cqerl.git", {tag, "v1.0.8"}}},
+      {emysql, "0.4.4", {pkg, inaka_emysql}},
+      {blockaderl, {git, "https://github.com/lambdaclass/blockaderl.git", {ref, "d114125"}}}
     ]}
   ]}
 ]}.
